--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: 1.20
 
     - name: Build
-      working-directory: scripts
+      working-directory: src
       run: |
         go get .
         go build -v ./...
