--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,10 +19,10 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: 1.20
+        go-version-file: src/go.mod
+        cache-dependency-path: src/go.sum
 
     - name: Build
       working-directory: src
       run: |
-        go get .
         go build -v ./...
