--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,23 +12,23 @@ on:
 jobs:
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
 
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version-file: src/go.mod
-        cache-dependency-path: src/go.sum
+        go-version-file: src\go.mod
+        cache-dependency-path: src\go.sum
 
     - name: Build
       working-directory: src
       run: |
-        go build -v ./...
+        go build -v -o ArcPatcher.exe
     
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
       with:
-        path: src/ArcPatcher.exe
+        path: src\ArcPatcher.exe
         name: ArcPatcher.exe
